update5 loading & jumb & scrolling save &

--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    
     <link rel="icon" type="image/svg+xml" href="/mypic.jpg" />
     <link rel="icon" type="image/jpg" sizes="32×32" href="./images/myprof.jpg" />
       <link rel="apple-touch-icon" sizes="180x180" href="./images/mypic.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Mphammed Fuad</title>
     <link rel="stylesheet" href="/style.css">
+    <style>
+      img{
+        pointer-events: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
