--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     
-    <link rel="icon" type="image/svg+xml" href="/mypic.jpg" />
-    <link rel="icon" type="image/jpg" sizes="32×32" href="./images/myprof.jpg" />
-      <link rel="apple-touch-icon" sizes="180x180" href="./images/mypic.jpg">
+    <link rel="icon" type="image/svg+xml" href="./images/Sinwarr.svg" />
+    <link rel="icon" type="image/jpg" sizes="32×32" href="./images/Sinwar.png" />
+      <link rel="apple-touch-icon" sizes="180x180" href="./images/Sinwar.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Mphammed Fuad</title>
