--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no" />
     <title>Mphammed Fuad</title>
     <link rel="stylesheet" href="/style.css">
+    <link 
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"  rel="stylesheet"/>
     <style>
       img{
         pointer-events: none;
