--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <link rel="apple-touch-icon" sizes="180x180" href="./images/Sinwar.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="viewport" content="width=device-width, user-scalable=no" />
-    <title>Mphammed Fuad</title>
+    <title>Mohammed Fuad</title>
     <link rel="stylesheet" href="./style.css">
     <link 
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"  rel="stylesheet"/>
